--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     <title>Amigo Organisers</title>
 </head>
 <body>
-
-
-
     <div class="main">
         <div class="left">
             <div class="left-content">
@@ -29,7 +26,7 @@
 
         <div class="right">
             <div class="logo">
-                <img src="./images/logo.png" alt="amoigo-logo.png">
+                <img src="./images/Amigi logo-black-without background.png" alt="amoigo-logo.png">
             </div>
 
             <div class="right-content">
