--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 
+    <!-- scrollreveal.js -->
+    <script src="./scrollreveal.min.js"></script>
+
+    <!-- main.js -->
+    <script src="./main.js"></script>
+
     <link rel="stylesheet" href="./style.css">
     <title>Amigo Organisers</title>
 </head>
